updated the descriptions

--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
         </circle>
       </g>
 
-      <!-- From Sydney... -->
+      <!-- From Melbourne... -->
       <g transform="translate(10, 48)" class="msg-2">
         <rect width="418" height="66.1302" rx="18.0355" />
-        <text x="15" y="27">I live in Melbourne, Australia – it’s supposed to be 68° F</text>
+        <text x="15" y="27">I live in Melbourne – it’s supposed to be 68° F</text>
         <text x="15" y="50">(20° C) and ☀️ here today.</text>
       </g>
 
