--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
       <!-- Worked at... -->
       <g transform="translate(10, 120)" class="msg-3">
         <rect width="430" height="66.1302" rx="18.0355" />
-        <text x="15" y="27">I’m a polyglot software engineer specialized in backend technologies and android application development. I have worked in various industries. </text>
+        <text x="15" y="27">I’m a polyglot software engineer and avid gamer. </text>
         <text x="15" y="50">
           I’ve been at
           <a xlink:href="https://bilue.com.au/">Bilue</a>
-          for about 14 months now.
+          for about 14 months.
         </text>
       </g>
 
