--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
         <rect width="430" height="66.1302" rx="18.0355" />
         <text x="15" y="27">I’m a polyglot software engineer and avid gamer. </text>
         <text x="15" y="50">
-          I’ve been at
-          <a xlink:href="https://bilue.com.au/">Bilue</a>
-          for about 14 months.
+          I’ve been tinkering things at
+          <a xlink:href="https://eatclub.com.au/">EatClub</a>
+          recently.
         </text>
       </g>
 
